Linux AMD drivers UI glitches when Window Draw Method is set to automatic #49945

Closed
opened 2016-11-05 14:52:30 +01:00 by Gustav · 14 comments

System Information
Ubuntu 16.04 with AMD 280x and mesa 13.1.0-devel

Blender Version
2.78a

Short description of error
Blender UI is artifacting badly when hovering over UI elements or rotating 3d view.

Solved by launching with the command LIBGL_DRI3_DISABLE=1 blender or in blender to Blender User Preferences - System - Window Draw Method and change to Triple Buffer.

Freedesktop bug report: https://bugs.freedesktop.org/show_bug.cgi?id=97059

Exact steps for others to reproduce the error
Use AMD and mesa drivers
Start blender with Window Draw Method set to automatic.
UI should have bad artifacting.

Change Window Draw Method to Triple Buffer
Restart blender
No UI problems

**System Information** Ubuntu 16.04 with AMD 280x and mesa 13.1.0-devel **Blender Version** 2.78a **Short description of error** Blender UI is artifacting badly when hovering over UI elements or rotating 3d view. Solved by launching with the command LIBGL_DRI3_DISABLE=1 blender or in blender to Blender User Preferences - System - Window Draw Method and change to Triple Buffer. Freedesktop bug report: https://bugs.freedesktop.org/show_bug.cgi?id=97059 **Exact steps for others to reproduce the error** Use AMD and mesa drivers Start blender with Window Draw Method set to automatic. UI should have bad artifacting. Change Window Draw Method to Triple Buffer Restart blender No UI problems
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @watsug

Added subscriber: @watsug
Member

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger
Member

This does not sound like a blender issue but rather a GPU driver issue.

This does not sound like a blender issue but rather a GPU driver issue.

Added subscriber: @funfunctor

Added subscriber: @funfunctor

In #49945#402748, @MartijnBerger wrote:
This does not sound like a blender issue but rather a GPU driver issue.

No its a blender issue not choosing triple buffering when using mesa and DRI3.

Look in,
source/blender/gpu/intern/gpu_extensions.c
source/blender/windowmanager/intern/wm_draw.c

> In #49945#402748, @MartijnBerger wrote: > This does not sound like a blender issue but rather a GPU driver issue. No its a blender issue not choosing triple buffering when using mesa and DRI3. Look in, source/blender/gpu/intern/gpu_extensions.c source/blender/windowmanager/intern/wm_draw.c
Proposed fix in https://developer.blender.org/D2342

Added subscribers: @MikeErwin, @dfelinto, @brecht, @Sergey

Added subscribers: @MikeErwin, @dfelinto, @brecht, @Sergey

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sergey Sharybin self-assigned this 2016-11-08 10:10:52 +01:00

This is an OpenGL issues. While our automatic detection might be improved, the timelife of this is rather short. The plan is to switch to a triple buffer in blender2.8 branch.

Trying to fix this in master now will either cause breakage for someone else or lead to huge amount of time verifying it works on all the hardware.

So i would suggest to simply ignore this, unless someone really wants to dedicate time for this.

Putting on the radars of @MikeErwin, @dfelinto and @brecht who are involved into this area.

Archiving as a TODO.

This is an OpenGL issues. While our automatic detection might be improved, the timelife of this is rather short. The plan is to switch to a triple buffer in blender2.8 branch. Trying to fix this in master now will either cause breakage for someone else or lead to huge amount of time verifying it works on all the hardware. So i would suggest to simply ignore this, unless someone really wants to dedicate time for this. Putting on the radars of @MikeErwin, @dfelinto and @brecht who are involved into this area. Archiving as a TODO.

Just curious, where do you expect triple buffer not to work? Apple's OpenGL implementation I suppose?

Just curious, where do you expect triple buffer _not_ to work? Apple's OpenGL implementation I suppose?

For a long tie it were AMD cards, but nowadays they seems to be fine. There were also problems with Intel cards, especially GMA series. Apple's OpenGL i do not know details.

We are currently working on a complete re-work of OpenGL in blender2.8 branch, where we can just assume triple buffer an essential thing to run Blender, but we can't do it yet in the master branch. So have some doubts it's benefitical to spend time solving the issue there. Especially when it's easy to break compat (keep in mind, the policy is 10 years old hardware and 5 years old software is to be supported).

You are mentioning it is an issue with 13.1.0-devel version, is it an issue with the current stable release version of the driver?

For a long tie it were AMD cards, but nowadays they seems to be fine. There were also problems with Intel cards, especially GMA series. Apple's OpenGL i do not know details. We are currently working on a complete re-work of OpenGL in blender2.8 branch, where we can just assume triple buffer an essential thing to run Blender, but we can't do it yet in the master branch. So have some doubts it's benefitical to spend time solving the issue there. Especially when it's easy to break compat (keep in mind, the policy is 10 years old hardware and 5 years old software is to be supported). You are mentioning it is an issue with 13.1.0-devel version, is it an issue with the current stable release version of the driver?
Member

@funfunctor Have you tried the blender2.8 branch? I did some changes there which are not in master but could be ported.

Tested with AMD and NVIDIA cards on latest Fedora & its default Mesa. I have not tried latest Mesa.

Triple buffer works fine on Mac too btw.

@funfunctor Have you tried the blender2.8 branch? I did some changes there which are not in master but *could* be ported. Tested with AMD and NVIDIA cards on latest Fedora & its default Mesa. I have not tried latest Mesa. Triple buffer works fine on Mac too btw.

Added subscriber: @alucowie

Added subscriber: @alucowie
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49945
No description provided.